--- a/app/src/package.json
+++ b/app/src/package.json
@@ -8,7 +8,7 @@
     "build-css-forever": "npx tailwindcss -i ./css/base.css -o ./css/main.css --watch",
     "start:dev": "ENV=dev && cd .. && npm run build-css && python app.py",
     "start:prod": "ENV=prod && cd .. && npm run build-css && python app.py",
-    "yeet-it": "npm run build-css && git add -A && git commit -m \"yeet it 😈\" && git push && echo \"yeeted it 😈\""
+    "yeet-it": "npm run build-css && git add -A && git commit -m \"yeet it 😈\" && git push && echo \"\nyeeeeeeeeeeeeeeeeeeted it 😈\n\""
   },
   "keywords": [],
   "author": "",
